--- a/client/app.json
+++ b/client/app.json
@@ -1,7 +1,10 @@
 {
   "pages":[
-    "pages/classic/classic"
+    "pages/classic/classic",
+    "pages/book/book",
+    "pages/my/my"
   ],
+  "requiredBackgroundModes": ["audio"],
   "window":{
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "沃尔特科技公司",
@@ -10,5 +13,30 @@
     "backgroundColor": "#fff",
     "enablePullDownRefresh": false,
     "backgroundTextStyle":"light"
+  },
+  "tabBar": {
+    "selectedColor": "#000",
+    "backgroundColor": "#fff",
+    "color": "#c7c7c7",
+    "list": [
+      {
+        "pagePath": "pages/classic/classic",
+        "text": "流行",
+        "iconPath": "/images/tab/classic.png",
+        "selectedIconPath": "/images/tab/classic@highlight.png"
+      },
+      {
+        "pagePath": "pages/book/book",
+        "text": "书籍",
+        "iconPath": "/images/tab/book.png",
+        "selectedIconPath": "/images/tab/book@highlight.png"
+      },
+      {
+        "pagePath": "pages/my/my",
+        "text": "我的",
+        "iconPath": "/images/tab/my.png",
+        "selectedIconPath": "/images/tab/my@highlight.png"
+      }
+    ]
   }
 }
